src/cses/permutations/clang-tidy.txt
2 warnings and 1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/permutations/permutations.cpp.
/Users/michael/repos/competitive-programming/src/cses/permutations/permutations.cpp:3:10: error: 'cstdint' file not found [clang-diagnostic-error]
    3 | #include <cstdint>
      |          ^~~~~~~~~
/Users/michael/repos/competitive-programming/src/cses/permutations/permutations.cpp:22:5: warning: this loop is infinite; none of its condition variables (value) are updated in the loop body [bugprone-infinite-loop]
   22 |     for (std::uint64_t value{2}; value <= n; value += 2) {
      |     ^
/Users/michael/repos/competitive-programming/src/cses/permutations/permutations.cpp:30:5: warning: this loop is infinite; none of its condition variables (value) are updated in the loop body [bugprone-infinite-loop]
   30 |     for (std::uint64_t value{1}; value <= n; value += 2) {
      |     ^
Found compiler error(s).
